tests/neg/i23243.check
-- Error: tests\neg\i23243.scala:8:20 ----------------------------------------------------------------------------------
8 |    case Extractor() => println("foo matched") // error
  |                    ^
  |                    String | Null cannot be used in runtime type tests
